--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ html{
     }
     .projects-section{
         padding:0%;
+        margin:0%;
     }
     .about-me-header{
         margin-left:0%;
